--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/dist/base.css';
 @import 'tailwindcss/dist/components.css';
 @import 'tailwindcss/dist/utilities.css';
+
+.nombre-precio {
+    text-shadow: -20px 20px 5px rgba(159, 150, 150, 1);
+}
